<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="?android:attr/listPreferredItemHeight"
    android:paddingStart="?android:attr/listPreferredItemPaddingRight"
    android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
    android:paddingTop="8dp"
    android:clickable="true"
    android:focusable="true"
    android:background="?android:attr/selectableItemBackground"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/userlist_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/userlist_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignWithParentIfMissing="true"
            android:ellipsize="marquee"
            android:maxLines="1"
            android:text="@string/label_name"
            android:textSize="16sp" />


        <TextView
            android:id="@+id/userlist_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:maxLines="1"
            android:text="@string/label_distance"
            android:textSize="16sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/userlist_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/userlist_location"
            android:layout_width="match_parent"
            android:layout_height="26dip"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_alignWithParentIfMissing="true"
            android:ellipsize="marquee"
            android:maxLines="1"
            android:text="@string/label_location"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/userlist_time"
            android:layout_width="wrap_content"
            android:layout_height="26dip"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:maxLines="1"
            android:text="@string/label_time"
            android:textSize="12sp" />
    </RelativeLayout>
</LinearLayout>
