<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="?android:attr/listPreferredItemHeight"
    android:padding="6dip">

    <TextView
        android:id="@+id/userlist_distance"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginEnd="10dip"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:gravity="center_vertical"
        android:maxLines="1"
        android:text="@string/label_distance"
        android:textSize="18sp"
        />

    <RelativeLayout
        android:id="@+id/userlist_left"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:layout_toStartOf="@id/userlist_distance"
        android:layout_marginStart="10dip">
        <TextView
            android:id="@+id/userlist_location"
            android:layout_width="match_parent"
            android:layout_height="26dip"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:ellipsize="marquee"
            android:maxLines="1"
            android:text="@string/label_location"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/userlist_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/userlist_location"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_alignWithParentIfMissing="true"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:text="@string/label_name"
            android:textSize="16sp" />
    </RelativeLayout>



</RelativeLayout>