<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="wtf.kl.locshare.EditUserActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="wtf.kl.locshare.EditUserActivity"
        tools:showIn="@layout/activity_edit_user">

        <LinearLayout
            android:id="@+id/edit_name_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12sp"
                android:labelFor="@+id/edit_username"
                android:text="@string/label_username"/>
            <TextView
                android:id="@id/edit_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textIsSelectable="true"
                android:padding="12sp"/>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/edit_remote_pubkey_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/edit_remote_pubkey"
                    android:inputType="text"
                    android:hint="@string/label_remote_pubkey"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:padding="12sp"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/edit_local_privkey_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/edit_local_privkey"
                    android:inputType="text"
                    android:hint="@string/label_local_privkey"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:padding="12sp"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/edit_toggle_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24sp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12sp"
                android:labelFor="@+id/edit_local_pubkey"
                android:text="@string/label_local_pubkey"/>
            <TextView
                android:id="@id/edit_local_pubkey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textIsSelectable="true"
                android:padding="12sp"/>
            <RelativeLayout
                android:id="@+id/edit_publish_layout"
                android:layout_height="wrap_content"
                android:layout_width="match_parent">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentStart="true"
                    android:padding="12sp"
                    android:labelFor="@+id/edit_publish"
                    android:text="@string/label_publish"/>
                <Switch
                    android:id="@id/edit_publish"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:checked="true"/>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/edit_subscribe_layout"
                android:layout_height="wrap_content"
                android:layout_width="match_parent">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentStart="true"
                    android:padding="12sp"
                    android:labelFor="@+id/edit_subscribe"
                    android:text="@string/label_subscribe"/>
                <Switch
                    android:id="@id/edit_subscribe"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:checked="true"/>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
