<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="wtf.kl.locshare.EditActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/content_add"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="wtf.kl.locshare.EditActivity"
        tools:showIn="@layout/activity_edit">

        <TextView
            android:id="@+id/edit_name_headline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@+id/edit_name"
            android:text="@string/label_name"/>
        <EditText
            android:id="@id/edit_name"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edit_name_headline"
            android:textSize="16sp"
            android:padding="12sp"/>
        <TextView
            android:id="@+id/edit_remote_pubkey_headline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edit_name"
            android:labelFor="@+id/edit_remote_pubkey"
            android:text="@string/label_remote_pubkey"/>
        <EditText
            android:id="@id/edit_remote_pubkey"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edit_remote_pubkey_headline"
            android:textSize="16sp"
            android:padding="12sp"/>
        <TextView
            android:id="@+id/edit_local_privkey_headline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edit_remote_pubkey"
            android:labelFor="@+id/edit_local_privkey"
            android:text="@string/label_local_privkey"/>
        <EditText
            android:id="@id/edit_local_privkey"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edit_local_privkey_headline"
            android:textSize="16sp"
            android:padding="12sp"/>
        <TextView
            android:id="@+id/edit_local_pubkey_headline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edit_local_privkey"
            android:labelFor="@+id/edit_local_pubkey"
            android:text="@string/label_local_pubkey"/>
        <TextView
            android:id="@id/edit_local_pubkey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edit_local_pubkey_headline"
            android:textSize="16sp"
            android:textIsSelectable="true"
            android:padding="12sp"/>

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>
